fixing issue with buttons on Safari Mobile

--- a/views/css/style.css
+++ b/views/css/style.css
@@ -45,8 +45,8 @@
 }
 
 button {
-	-webkit-border-radius: 0px;
-	border-radius: 0px;
+	-webkit-border-radius: 0px !important;
+	border-radius: 0px !important;
 }
 
 #map_canvas {
